--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1" name="viewport">
-  <title>Classroom</title>
+  <title  id></title>
   <style>
     body { background-color: #333; font-size: 1.5em; padding: 0em 0.25em; }
     pre { color: #fff; white-space: pre-wrap; word-wrap: break-word; text-shadow: 0 0 10px #ccc; }
@@ -27,6 +27,7 @@
   var b = Bugout("bugout-chat-tutorial");
   b.on("left", function(address) { log(address + " [ left ]"); });
   b.on("seen", function(address) { log(address + " [ seen ]"); });
+  b.on("seen", function(address) { 
   log(b.address() + " [ me ]");
   
   b.on("message", function(address, message) {
