--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1" name="viewport">
-  <title  id></title>
+  <title></title>
   <style>
     body { background-color: #333; font-size: 1.5em; padding: 0em 0.25em; }
     pre { color: #fff; white-space: pre-wrap; word-wrap: break-word; text-shadow: 0 0 10px #ccc; }
@@ -25,7 +25,7 @@
   log("Hello world!");
 
   var b = Bugout("bugout-chat-tutorial");
-  b.on("left", function(address) { log(address + " [ left ]"); });
+
   b.on("seen", function(address) { log(address + " [ seen ]"); });
   log(b.address() + " [ me ]");
   
