--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   var b = Bugout("bugout-chat-tutorial");
 
   b.on("seen", function(address) { log(address + " [ seen ]"); });
+  b.on("left", function(address) { log(address + " [ left ]"); });
   log(b.address() + " [ me ]");
   
   b.on("message", function(address, message) {
