--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head onload="checkCookie()">
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <title></title>
@@ -17,7 +17,7 @@
   </script>
   <script src="https://chr15m.github.io/bugout/bugout.min.js" type="application/javascript"></script>
 </head>
-<body onload="checkCookie()">
+<body>
   <pre id="log"></pre>
   <pre id="input" contenteditable="true"></pre>
 </body>
