--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1" name="viewport">
+  <meta content="width=device-width, initial-scala=e=1" name="viewport">
   <title></title>
   <style>
     body { background-color: #333; font-size: 1.5em; padding: 0em 0.25em; }
@@ -22,21 +22,23 @@
   <pre id="input" contenteditable="true"></pre>
 </body>
 <script>
-  log("Hello world!");
+  var name = prompt("Enter a display name", "name");
+  log("Welcome " + name);
 
   var b = Bugout("bugout-chat-tutorial");
 
-  b.on("seen", function(address) { log(address + " [ seen ]"); });
-  log(b.address() + " [ me ]");
+  b.on("seen", function(address) { log("Someone Has Joined"); });
+  log(name + " [ me ]");
   
   b.on("message", function(address, message) {
-    log(address + ": " + message);
+    log(message);
   });
 
   document.getElementById("input").onkeydown = function(ev) {
     if (ev.keyCode == 13) {
       if (b.lastwirecount) {
-        b.send(ev.target.textContent);
+         var msg = name + ": " + ev.target.textContent 
+        b.send(msg);
         ev.target.textContent = "";
       }
       ev.preventDefault();
