--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   document.getElementById("input").onkeydown = function(ev) {
     if (ev.keyCode == 13) {
       if (b.lastwirecount) {
-         var msg = name + " " + ev.target.textContent 
+         var msg = name + ": " + ev.target.textContent 
         b.send(msg);
         ev.target.textContent = "";
       }
