--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scala=e=1" name="viewport">
   <title></title>
+  <link rel="shortcut icon" href="images.png" type="image/x-icon" />
   <style>
     body { background-color: #333; font-size: 1.5em; padding: 0em 0.25em; }
     pre { color: #fff; white-space: pre-wrap; word-wrap: break-word; text-shadow: 0 0 10px #ccc; }
@@ -13,27 +14,36 @@
   <script>
     function log(message) {
       document.getElementById("log").textContent += message + "\n";
-    }
+    };
+
   </script>
   <script src="https://chr15m.github.io/bugout/bugout.min.js" type="application/javascript"></script>
 </head>
 <body>
+<script>
+    function title(title){
+      var num = title + 1
+      var title1 = "Users Online " + num
+      document.title = title1
+    };
+    
+</script>
   <pre id="log"></pre>
   <pre id="input" contenteditable="true"></pre>
 </body>
 <script>
   var name = prompt("Enter a display name", "name");
   log("Welcome " + name);
-
   var b = Bugout("bugout-chat-tutorial");
-
   b.on("seen", function(address) { log("Someone Has Joined"); });
   log(name + " [ me ]");
   
   b.on("message", function(address, message) {
     log(message);
   });
-
+  b.on("connections", function(count){ 
+    title(count)
+  });
   document.getElementById("input").onkeydown = function(ev) {
     if (ev.keyCode == 13) {
       if (b.lastwirecount) {
@@ -44,6 +54,5 @@
       ev.preventDefault();
     }
   }
-
 </script>
 </html>
