--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ function checkCookie() {
   </script>
   <script src="https://chr15m.github.io/bugout/bugout.min.js" type="application/javascript"></script>
 </head>
-<body>
+<body onload="checkCookie()">
   <pre id="log"></pre>
   <pre id="input" contenteditable="true"></pre>
 </body>
