--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 <body>
 <script>
     function title(title){
-      var num = title + 1
-      var title1 = "Users Online " + num
+      var title1 = "Users Online " + title
       document.title = title1
     };
     
