--- a/index.html
+++ b/index.html
@@ -16,12 +16,7 @@
     }
   </script>
   <script src="https://chr15m.github.io/bugout/bugout.min.js" type="application/javascript"></script>
-  <script type="text/javascript">
-    var alerted = localStorage.getItem('alerted') || '';
-    if (alerted != 'yes') {
-     alert("My alert.");
-     localStorage.setItem('alerted','yes');
-    }
+
 </script>
 </head>
 <body >
@@ -113,7 +108,7 @@
   <div id="mySidebar" class="sidebar">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <a>Updates</a>
-      <b>Beta 1.0 - Sidebar added and logs</b>
+      <b>Beta 1.0 - Sidebar added and logs \n Also, NEW LINK, you can now use bit.ly/tms-chat as the link for the chat.</b>
     </div>
     
     <div id="main">
