--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
   <div id="mySidebar" class="sidebar">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <a>Updates</a>
-      <b>Beta 1.0 - Sidebar added and logs \n Also, NEW LINK, you can now use bit.ly/tms-chat as the link for the chat.</b>
+    <b>Beta 1.0 - Sidebar added and logs</b>
+<b> Also, NEW LINK, you can now use bit.ly/tms-chat as the link for the chat.</b>
     </div>
     
     <div id="main">
