--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <a>Updates</a>
     <b>Beta 1.0 - Sidebar added and logs</b>
-<b> Also, NEW LINK, you can now use bit.ly/tms-chat as the link for the chat.</b>
+    <b> Also, NEW LINK, you can now use </b>
+    <b herf="bit.ly/tms-chat">bit.ly/tms-chat</b>
     </div>
     
     <div id="main">
