--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
     
     <div id="main">
       <button id="open" class="openbtn" onclick="openNav()">&#9776;</button> 
+      <button id="open" class="openbtn" onclick="openNav()">&#9776;</button> 
       <pre id="log"></pre>
       <pre id="input" contenteditable="true"></pre>
     </div>
