--- a/index.html
+++ b/index.html
@@ -65,7 +65,10 @@
     }
     
     /* The button used to open the sidebar */
-    .openbtn {
+      .openbtn1{
+        top: 13;
+      }
+      .openbtn {
       font-size: 20px;
       cursor: pointer;
       background-color: #111;
