--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       border: none;
       position: absolute;
       right: -5px;
-      top: -10;
+      top: -10px;
       transition: 0.5s;
     }
     
