--- a/index.html
+++ b/index.html
@@ -151,10 +151,14 @@ setInterval(function() {
 }, 500);
   var b = Bugout("bugout-chat-tutorial");
   var user = prompt("Choose A Display Name");
+  var online = b.on("connections", function(count){online = count + 1});
   if (user == "062206"){
     user = "[ADMIN] Gavin"
     var message = "[SEVER] The Owner Has Joined"
-    b.send(message)
+    if(online == 1){
+      log("[SEVER] The Owner Has Joined");
+    }
+     b.send(message);
   };
   b.on("seen", function(address) { log("Someone Has Joined"); });
   log(user + " [ me ]");
