--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ setInterval(function() {
       <a>Updates</a>
     <b>Beta 1.0 - Sidebar added and logs</b>
     <b> Also, NEW LINK, you can now use </b>
-    <b herf="bit.ly/tms-chat">bit.ly/tms-chat</b>
+    <b herf="https://bit.ly/tms-chat">bit.ly/tms-chat</b>
     </div>
     
     <div id="main">
@@ -155,7 +155,7 @@ setInterval(function() {
   var online = b.on("connections", function(count){online = count + 1});
   if (user == "062206"){
     user = "[ADMIN] Gavin"
-    var message = "[SEVER] The Owner Has Joined
+    var message = "[SEVER] The Owner Has Joined"
      b.send(message);
   };
   b.on("seen", function(address) { log("Someone Has Joined"); });
