--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ setInterval(function() {
   var online = b.on("connections", function(count){online = count + 1});
   if (user == "062206"){
     user = "[ADMIN] Gavin"
-    var message = "[SEVER] The Owner Has Joined"
+    var message = "[SERVER] The Owner Has Joined"
      b.send(message);
   };
   b.on("seen", function(address) { log("Someone Has Joined"); });
