--- a/index.html
+++ b/index.html
@@ -150,8 +150,10 @@ setInterval(function() {
 </body>
 <script>
   
-  var b = Bugout("bugout-chat-tutorial");
+  var b = new Bugout("HGDSJA67wbHsjjdsj&%wejsdufk");
+  b.on("server
   var user = prompt("Choose A Display Name");
+  window.close();
   var online = b.on("connections", function(count){online = count + 1});
   if (user == "062206"){
     user = "[ADMIN] Gavin"
