--- a/index.html
+++ b/index.html
@@ -156,8 +156,11 @@ setInterval(function() {
   var online = b.on("connections", function(count){online = count + 1});
   if (user == "062206"){
     user = "[ADMIN] Gavin"
+    b.on("server", function(address){
+      if(b.address == address){
     var message = "[SERVER] The Owner Has Joined"
      b.send(message);
+      });
   };
   b.on("seen", function(address) { log("Someone Has Joined"); });
   log(user + " [ me ]");
