--- a/index.html
+++ b/index.html
@@ -153,14 +153,16 @@ setInterval(function() {
   var b = new Bugout("HGDSJA67wbHsjjdsj&%wejsdufk");
   var user = prompt("Choose A Display Name");
  
-  var online = b.on("connections", function(count){online = count + 1});
+  if (user == "gertiegert000"){
+    user = "[HEAD MOD] King Loser"
+     });
+  if (user == "REEE"){
+    user = "[MOD] BUTCHINATE"
+     });
+  
   if (user == "062206"){
-    user = "[ADMIN] Gavin"
-    b.on("server", function(address){
-      if(b.address == address){
-    var message = "[SERVER] The Owner Has Joined"
-     b.send(message);
-      }});
+    user = "[OWNER] Gavin
+     });
   };
   b.on("seen", function(address) { log("Someone Has Joined"); });
   log(user + " [ me ]");
