--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ setInterval(function() {
      });
   
   if (user == "062206"){
-    user = "[OWNER] Gavin
+    user = "[OWNER] Gavin"
      });
   };
   b.on("seen", function(address) { log("Someone Has Joined"); });
