--- a/index.html
+++ b/index.html
@@ -156,6 +156,9 @@ setInterval(function() {
   if (user == "gertiegert000"){
     user = "[HEAD MOD] King Loser"
      };
+   if (user == "dan"){
+    user = "[VERIFIED] Tech Geek"
+     };
   if (user == "REEE"){
     user = "[MOD] BUTCHINATE"
      };
