--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ setInterval(function() {
 </body>
 <script>
   
-  var b = new Bugout("HGDSJA67wbHsjjdsj&%wejsdufk");
+  var b = new Bugout("jkkjdfndzcnbdzfbdfzjbgfzd,");
   var user = prompt("Choose A Display Name");
  
   if (user == "gertiegert000"){
