--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-
+<!doctype HTML>
+<head>
+</head>
+<body>
+  <script>
+      window.location.assign("https://24gfox712.github.io/chat/tms-main.html")
+</body>
