--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!doctype HTML>
 <head>
+  <button type="button" value="Hi" onClick="openWin"/>
 </head>
 <body>
   <script>
-      window.location.assign("https://24gfox712.github.io/chat/tms-main.html")
+  window.open("https://www.w3schools.com","_blank");
+      }
   </script>
 </body>
