--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!doctype HTML>
-<head>
-  <button type="button" value="Hi" onClick="openWin"/>
-</head>
+<html>
 <body>
+  <input type="button" value="Open Window" onclick="openWin()">
   <script>
-  window.open("https://www.w3schools.com","_blank");
-      }
+  function openWin(){
+  window.open("https://24gfox712.github.io/chat/tms-main.html","_blank", );
+      };
+      alert(document.location.origin);
   </script>
 </body>
+</html>
