--- a/tms-main.html
+++ b/tms-main.html
@@ -108,7 +108,7 @@
       var files = ["index.html"];
 var old = null;
 setInterval(function() {
-  fetch("index.html").then(function(data) {
+  fetch("tms-main.html").then(function(data) {
     data.text().then(function(t) {
       if (old != null && old != t) {
         document.location.reload();
