--- a/tms-main.html
+++ b/tms-main.html
@@ -162,7 +162,7 @@ function getCookie(cname) {
   }
   return "";
 }
-  var b = new Bugout("jkkjdfndzcnbzfbdfzjbgfzd,");
+  var b = new Bugout("jkkjdfndzcnbzfbdfzjbgfzd");
   var user = prompt("Choose A Display Name");
  
   if (user == "gertiegert000"){
