--- a/tms-main.html
+++ b/tms-main.html
@@ -185,9 +185,9 @@ function getCookie(cname) {
   log(user + " [ me ]");
   
   
-  b.on("message", function(address, message) {
+ b.on("message", function(address, message) {
+    console.log(message);
     log(message);
-    console.log(msg)
   });
   document.getElementById("input").onkeydown = function(ev) {
     if (ev.keyCode == 13) {
