--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel='icon' href='favicon.ico' type='image/x-icon'/ >
   <script data-consolejs-channel="83c25abc-b559-45ba-0d49-9254a5ba2c25" src="https://remotejs.com/agent/agent.js"></script>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scala=e=1" name="viewport">
