--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       var files = ["index.html"];
 var old = null;
 setInterval(function() {
-  fetch("tms-main.html").then(function(data) {
+  fetch("index.html").then(function(data) {
     data.text().then(function(t) {
       if (old != null && old != t) {
         document.location.reload();
