--- a/index.html
+++ b/index.html
@@ -177,7 +177,10 @@ function getCookie(cname) {
     user = "[MOD] BUTCHINATE"
     document.cookie = "mod=true";
      }
-  
+  if (user == "jesse") {
+    user = "[JESSE] Looser"
+    document.cookie = "looser=true";
+  }
   if (user == "062206"){
     user = "[OWNER] Gavin"
     document.cookie = "owner=true";
