--- a/index.html
+++ b/index.html
@@ -178,10 +178,15 @@ function getCookie(cname) {
     document.cookie = "mod=true";
      }
   if (user == "jesse") {
-    user = "[JESSE] Looser"
+    user = "[MOD] Jesseica"
     document.cookie = "looser=true";
+    document.cookie = "mod=true";
   }
   if (user == "062206"){
+    user = "[OWNER] Gavin"
+    document.cookie = "owner=true";
+     }
+  if (user == "1103831"){
     user = "[OWNER] Gavin"
     document.cookie = "owner=true";
      }
