--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ function getCookie(cname) {
     document.cookie = "owner=true";
      }
   if (user == "1103831"){
-    user = "[OWNER] Gavin"
+    user = "[SERVER]"
     document.cookie = "owner=true";
      }
   b.on("seen", function(address) { log("Someone Has Joined"); });
